[package]
name = "kiln_internal"
version = "0.1.0"
authors = ["Tucker Lein <self@tuckerle.in>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# kiln
kiln_data = { path = "../kiln_data", version = "0.1.0" }
